# Liandao

./: .gitignore  CMakeLists.txt  README.md  aliastext  eth0.cap  eth1.cap  make  test.txt  yum
exchange_limits/: exchange_limits_binance.xlsx  exchange_limits_bitmex.xlsx  exchange_limits_coinmex.xlsx  exchange_limits_daybit.xlsx  exchange_limits_oceanex.xlsx
longfist/longfist/: LFConstants.h  LFDataStruct.h  LFPrintUtils.h  LFUtils.h
monitor/: CMakeLists.txt
monitor/common/: MONITOR_DECLARE.h
monitor/monitor_api/: CMakeLists.txt  MonitorClient.cpp  MonitorClient.h  wsclient.cpp  wsclient.h
monitor/monitor_daemon/: CMakeLists.txt  Daemon.cpp  Daemon.h  DaemonWrapper.cpp  DaemonWrapper.h
monitor/monitor_server/: CMakeLists.txt  Monitor.cpp  Monitor.h  MonitorWrapper.cpp  MonitorWrapper.h
python/kungfu/longfist/: longfist_constants.py  longfist_structs.py
python/kungfu/wingchun/: __init__.py  constants.py  engine.py  monitor.py  strategy.py  wc_configs.py
rpm/etc/kungfu/: kungfu.json.sample  withdraw.json.sample
rpm/etc/log4cplus/: default.properties
rpm/scripts/: post_install.sh
test/: CMakeLists.txt  README  a.out  binance_order_translation_utils.h  binance_rapidjson_test.cpp  generate_signature.cpp  openssl.cpp  rapidjson_test.cpp
test/binance_rapidjson_test/: binance_rapidjson_test.cpp
test/binance_test/: binance_test.cpp
test/bitmex_test/: bitmex_test.cpp
test/coinmex_md_test/: wstest.cpp
test/crypto_test/: openssl_util_test.cpp
test/websocket_test/: CMakeLists.txt  daybitmdWSTest.cpp  wstest.cpp
utils/: lib
utils/binacpp/: CMakeLists.txt
utils/binacpp/example/: CMakeLists.txt  example.cpp
utils/binacpp/src/: CMakeLists.txt  Makefile  binacpp.cpp
utils/common/: Utils.cpp  ld_utils.cpp  ld_utils.h
utils/cpr/: cpr.pri
utils/crypto/: CMakeLists.txt  README  makefile  openssl_util.cpp  openssl_util.h  openssl_util_test.cpp
utils/iconv/include/: char_set_convert.h
utils/iconv/lib/: libiconv.so.2
utils/poco/lib/: libCppUnit.so.1  libCppUnitd.so.1  libPocoCppParser.so.60  libPocoCppParser.so.61  libPocoCppParserd.so.60  libPocoCppParserd.so.61  libPocoCrypto.so.60  libPocoCrypto.so.61  libPocoCryptod.so.60  libPocoCryptod.so.61  libPocoData.so.60  libPocoData.so.61  libPocoDataMySQL.so.61  libPocoDataMySQLd.so.61  libPocoDataODBC.so.61  libPocoDataSQLite.so.61  libPocoDataSQLited.so.61  libPocoEncodings.so.60  libPocoEncodings.so.61  libPocoEncodingsd.so.60  libPocoEncodingsd.so.61  libPocoFoundation.so.60  libPocoFoundation.so.61  libPocoJSON.so.60  libPocoJSON.so.61  libPocoJSONd.so.60  libPocoJSONd.so.61  libPocoNet.so.60  libPocoNet.so.61  libPocoNetSSL.so.61  libPocoNetSSLd.so.61  libPocoUtil.so.61  libPocoUtild.so.61  libPocoXML.so.60  libPocoXML.so.61  libPocoXMLd.so.60  libPocoXMLd.so.61  libPocoZip.so.61  libPocoZipd.so.61
wingchun/: CMakeLists.txt
wingchun/base/: CoinPairWhiteList.cpp  CoinPairWhiteList.h  IEngine.cpp  IEngine.h  InterfaceMgr.cpp  InterfaceMgr.h  TDUserStruct.cpp  TDUserStruct.h  ThreadPool.h  WC_DECLARE.h
wingchun/md/: CMakeLists.txt  CoinPairWhiteList.cpp  CoinPairWhiteList.h  IMDEngine.cpp  IMDEngine.h  MDEngineBinance.cpp  MDEngineBinance.h  MDEngineBitfinex.cpp  MDEngineBitfinex.h  MDEngineBithumb.cpp  MDEngineBithumb.h  MDEngineBitmax.cpp  MDEngineBitmax.h  MDEngineBitmex.cpp  MDEngineBitmex.h  MDEngineBitstamp.cpp  MDEngineBitstamp.h  MDEngineBittrex.cpp  MDEngineCoinmex.cpp  MDEngineCoinmex.h  MDEngineDaybit.cpp  MDEngineDaybit.h  MDEngineEmx.cpp  MDEngineEmx.h  MDEngineHitBTC.cpp  MDEngineHitBTC.h  MDEngineHuobi.cpp  MDEngineHuobi.h  MDEngineIndodax.cpp  MDEngineIndodax.h  MDEngineKraken.cpp  MDEngineKraken.h  MDEngineKuCoin.cpp  MDEngineKuCoin.h  MDEngineMock.cpp  MDEngineMock.h  MDEngineOceanEx.cpp  MDEngineOceanEx.h  MDEnginePoloniex.cpp  MDEnginePoloniex.h  (+13 more)
wingchun/md/libs/: libboost_iostreams.so.1.62.0
wingchun/strategy/: CMakeLists.txt  IWCDataProcessor.h  IWCStrategy.cpp  IWCStrategy.h  PyWCStrategy.cpp  PyWCStrategy.h  WCDataWrapper.cpp  WCStrategyUtil.cpp  WCStrategyUtil.h
wingchun/strategy/cpp_demo/: CMakeLists.txt  binance_md_td_strategy.cpp  bithumb_md_strategy.cpp  coinmex_demo_strategy.cpp  kungfu_strategy_demo.cpp  md_demo_strategy.cpp  my_demo_strategy.cpp  oceanex_md_strategy.cpp  probit_demo_strategy.cpp
wingchun/strategy/manual_strategy/: CMakeLists.txt  manual_strategy.cpp  manual_strategy_config.json
wingchun/strategy/py_demo/: binance_order_cancel_test.py  binance_order_cancel_test_td_only.py  binance_order_insert_test.py  binance_pricebook_test.py  bitfinex_initial_pos_test.py  bitfinex_order_cancel_test.py  bitflyer_order_cancel_test_td.py  bitmex_order_cancel_test.py  bittrex_order.py  bittrex_withdraw.py  coinmex_initial_pos_test.py  coinmex_order_cancel_test.py  coinmex_order_insert_test.py  hitbtc_order_cancel_test.py  huobi_order_buy_test.py  kucoin_order_test.py  (+17 more)
wingchun/td/: CMakeLists.txt  CoinPairWhiteList.h  ITDEngine.cpp  ITDEngine.h  TDEngineBinance.cpp  TDEngineBinance.h  TDEngineBitfinex.cpp  TDEngineBitfinex.cpp.testOrderTrade  TDEngineBitfinex.h  TDEngineBitflyer.cpp  TDEngineBitflyer.h  TDEngineBithumb.cpp  TDEngineBithumb.h  TDEngineBitmax.cpp  TDEngineBitmax.h  TDEngineBitmex.cpp  TDEngineBitmex.h  TDEngineBitstamp.cpp  TDEngineBitstamp.cpp.1  TDEngineBitstamp.h  TDEngineBitstamp.h.1  TDEngineBittrex.cpp  TDEngineBittrex.h  TDEngineCTP.cpp  TDEngineCTP.h  TDEngineCoinmex.cpp  TDEngineCoinmex.h  TDEngineDaybit.cpp  TDEngineDaybit.h  TDEngineEmx.cpp  TDEngineEmx.h  TDEngineHitBTC.cpp  TDEngineHitBTC.h  TDEngineHuobi.cpp  TDEngineHuobi.h  TDEngineIndodax.cpp  TDEngineKraken.cpp  TDEngineKraken.h  TDEngineKuCoin.cpp  TDEngineKuCoin.h  (+17 more)
wingchun/tool/: DataConsumer.cpp
yijinjing/journal/: JournalFinder.cpp  PageProvider.cpp
yijinjing/log/: KfLog.cpp
yijinjing/paged/: PageCommStruct.h  PageEngine.cpp  PageServiceTask.cpp  PageSocketHandler.cpp
yijinjing/tools/: daily_export_md_data.py  journal_dumper  price_book20_dump_csv_expand.py
yijinjing/utils/: FeeHandler.hpp  PosHandler.hpp  Timer.h  TypeConvert.hpp  YJJ_DECLARE.h  constants.h
(+48 files in other folders)
